# lvmc

./: .gitignore  CMakeLists.txt  README.md  sample.xml
include/: linAlg.h
inputs/: shastry_sutherland.xml  test.xml
src/: CMakeLists.txt  LatticeBuilderClass.cpp  LatticeBuilderClass.h  MPITests.cpp  MPITests.h  SimulationClass.cpp  SimulationClass.h  Tests.cpp  armadillo_test.cpp  config.h  main.cpp  main.h  main_read_bcast_write_xml.cpp
src/Communication/: Communication.cpp  Communication.h
src/IO/: IO.h  IO_Datatype.h  InputFile.cpp  InputFile.h
src/linalg/: CMakeLists.txt  distLinAlg.cpp  distLinAlg.h  linAlg.cpp
src/util/: inputFileStruct.h  xml_parser.h
